refactor: rename assets.map to assets.json

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ public/stylesheets
 assets/javascripts/lib/bower-components/
 
 support-frontend/conf/keys.conf
-support-frontend/conf/assets.map
+support-frontend/conf/assets.json
 support-frontend/conf/ssr-cache/
 !support-frontend/conf/ssr-cache/.gitexists
 support-frontend/public/compiled-assets/
@@ -40,7 +40,7 @@ support-frontend/Brewfile.lock.json
 support-frontend/project
 tools/
 
-conf/assets.map
+conf/assets.json
 assets/images/inline-svgs/*.svg
 /assets/images/svg-sprite.svg
 /public/compiled-assets/
