--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -89,7 +89,7 @@
     "@guardian/libs": "16.1.0",
     "@guardian/pasteup": "1.0.0-alpha.7",
     "@guardian/source": "8.0.0",
-    "@guardian/source-development-kitchen": "1.0.0",
+    "@guardian/source-development-kitchen": "^10.0.0",
     "@guardian/support-service-lambdas": "guardian/support-service-lambdas#70e330b5c433184981e2c6955025cbaa7666f353",
     "@guardian/tsconfig": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.4",
