--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for the supporter platform.",
   "scripts": {
     "clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
-    "validate": "echo 'Validating JS' && npm-run-all 'lint:fix' && yarn orphans",
+    "validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn orphans && yarn tsc",
     "lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
     "lint:check": "eslint ./assets --ext .ts --ext .tsx",
     "lint:fix": "yarn lint:check --fix",
@@ -16,9 +16,9 @@
     "webpack": "webpack",
     "webpack-dev-server": "webpack serve --config webpack.dev.js --port 9211",
     "devrun": "NODE_ENV=DEV npm-run-all clean webpack-dev-server",
-    "test": "NODE_ENV=test echo 'Running JS tests' && jest",
-    "test-watch": "NODE_ENV=test echo 'Running JS tests in watch mode' && jest --watch",
-    "jest-update-snapshot": "echo 'Updating JS tests' && jest -u",
+    "test": "NODE_ENV=test echo 'Running TS tests' && jest",
+    "test-watch": "NODE_ENV=test echo 'Running TS tests in watch mode' && jest --watch",
+    "jest-update-snapshot": "echo 'Updating TS tests' && jest -u",
     "paparazzi": "paparazzi && open ./paparazzi",
     "prepare": "cd .. && husky install ./support-frontend/.husky",
     "prettier:check": "prettier --check ./assets",
