--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
     "@types/node": "^20.11.27",
+    "eslint": "^8.57.0",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
