--- a/.github/workflows/playwright-smoke.yml
+++ b/.github/workflows/playwright-smoke.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   test:
-    if: ${{ (github.event.label.name == 'Seen-on-PROD') || (github.event.label.name == 'Open') }}
+    if: ${{ (github.event.label.name != 'Seen-on-PROD') }}
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
