--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,11 +1,11 @@
 name: Lighthouse CI
 on:
-  push:
   workflow_dispatch:
-  # pull_request:
-  #   types: [labeled] # Only run when a PR is labeled with the 'Seen-on-PROD' label set by prout
+  pull_request:
+    types: [labeled] # Only run when a PR is labeled with the 'Seen-on-PROD' label set by prout
 jobs:
   Lighthouse:
+    if: ${{ github.event.label.name == 'Seen-on-PROD' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
