--- a/.github/workflows/support-lambdas-build.yml
+++ b/.github/workflows/support-lambdas-build.yml
@@ -46,6 +46,8 @@ jobs:
           role-to-assume: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
           aws-region: eu-west-1
 
+      - uses: sbt/setup-sbt@v1
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
