--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -46,6 +46,8 @@ jobs:
         run: yarn run build-cfn
         working-directory: support-workers/cloud-formation/src
 
+      - uses: sbt/setup-sbt@v1
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
