--- a/.github/workflows/playwright-smoke.yml
+++ b/.github/workflows/playwright-smoke.yml
@@ -8,6 +8,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   test:
+    if: ${{ github.event.label.name == 'Seen-on-PROD' }}
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
@@ -37,3 +38,4 @@ jobs:
         run: |
           failedWorkflowRun="https://github.com/guardian/support-frontend/actions/runs/$GITHUB_RUN_ID"
           prTrigger="https://github.com/guardian/support-frontend/pull/${{ github.event.number }}"
+          curl -X POST -H "Content-Type: application/json" "$GOOGLE_CHAT_WEB_HOOK" -d '{"text": "🚨 The Playwright smoke tests for support-frontend have failed 🚨\n\n- <'"$failedWorkflowRun"'|You can see the reason for this failure on GitHub>. \n- <'"$prTrigger"'|PR that triggered this>.\n\n 📖 <https://github.com/guardian/support-frontend/wiki/Post-deployment-test-runbook|Check the runbook for a step by step guide>"}'
