--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -1,219 +1,219 @@
 {
-  "name": "support-frontend",
-  "version": "1.0.0",
-  "description": "Frontend for the supporter platform.",
-  "scripts": {
-    "clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
-    "validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn orphans && yarn tsc",
-    "lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
-    "lint:check": "eslint ./assets --ext .ts --ext .tsx",
-    "lint:fix": "yarn lint:check --fix",
-    "build-dev": "webpack --config webpack.dev.js",
-    "build-ssr": "tsx ./scripts/build-ssr-holding-content.tsx && tsx ./scripts/build-ssr-newspaper-archive-header.tsx",
-    "build-prod-no-test": "npm-run-all clean 'webpack --config webpack.prod.js'",
-    "build-prod": "npm-run-all clean test 'webpack --config webpack.prod.js'",
-    "build-github-action": "npm-run-all clean 'webpack --config webpack.prod.js --env ci=github'",
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack serve --config webpack.dev.js --port 9211",
-    "devrun": "NODE_ENV=DEV npm-run-all clean webpack-dev-server",
-    "test": "NODE_ENV=test echo 'Running TS tests' && jest",
-    "test-watch": "NODE_ENV=test echo 'Running TS tests in watch mode' && jest --watch",
-    "jest-update-snapshot": "echo 'Updating TS tests' && jest -u",
-    "paparazzi": "paparazzi && open ./paparazzi",
-    "prepare": "cd .. && husky install ./support-frontend/.husky",
-    "prettier:check": "prettier --check ./assets",
-    "prettier:fix": "prettier --write ./assets",
-    "storybook": "storybook dev -p 9001 --no-open",
-    "build-storybook": "storybook build -o storybook-static",
-    "orphans": "echo 'Checking for orphan modules' && node scripts/orphans.js",
-    "check-images": "echo 'Purging unused images' && node scripts/gridImages.js"
-  },
-  "browserslist": [
-    "extends @guardian/browserslist-config"
-  ],
-  "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.[jt]s?(x)",
-      "**/?(*.)+(spec|test).[jt]s?(x)",
-      "!**/__fixtures__/**"
-    ],
-    "transform": {
-      ".+\\.(js|jsx|ts|tsx)$": "./node_modules/babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "/node_modules/(?!@guardian|valibot)",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "json",
-      "es6",
-      "jsx",
-      "tsx"
-    ],
-    "modulePaths": [
-      "assets"
-    ],
-    "modulePathIgnorePatterns": [
-      "target",
-      "assets copy"
-    ],
-    "moduleNameMapper": {
-      "ophan(.*)": "<rootDir>/node_modules/ophan-tracker-js/build/ophan.support",
-      "\\.(css|less|sass|scss)$": "<rootDir>/assets/__mocks__/styleMock.ts",
-      "\\.(svg|png|jpg)$": "<rootDir>/assets/__mocks__/imageMock.ts"
-    },
-    "setupFilesAfterEnv": [
-      "./jestSetup"
-    ],
-    "verbose": true,
-    "testEnvironment": "./jestEnvironment"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guardian/support-frontend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/guardian/support-frontend/issues"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.23.7",
-    "@emotion/cache": "^10.0.29",
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/serialize": "^1.1.2",
-    "@emotion/utils": "^1.1.0",
-    "@floating-ui/react": "^0.19.2",
-    "@guardian/libs": "16.1.0",
-    "@guardian/pasteup": "1.0.0-alpha.7",
-    "@guardian/source": "8.0.0",
-    "@guardian/source-development-kitchen": "13.0.0",
-    "@guardian/support-service-lambdas": "guardian/support-service-lambdas#70e330b5c433184981e2c6955025cbaa7666f353",
-    "@guardian/tsconfig": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.4",
-    "@sentry/browser": "^8.33.1",
-    "@stripe/react-stripe-js": "^2.7.3",
-    "@stripe/stripe-js": "^4.1.0",
-    "@types/dompurify": "^3.0.2",
-    "@types/seedrandom": "^3.0.8",
-    "@types/uuid": "^9.0.2",
-    "classnames": "^2.5.1",
-    "dompurify": "^3.1.3",
-    "emotion-theming": "^11.0.0",
-    "framer-motion": "^1.11.1",
-    "lodash.debounce": "^4.0.6",
-    "mockdate": "^3.0.5",
-    "ophan-tracker-js": "^1.4.3",
-    "react-day-picker": "^7.4.8",
-    "react-is": "^18.2.0",
-    "react-redux": "^8.1.0",
-    "react-router-dom": "^6.23.0",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "seedrandom": "^3.0.5",
-    "snarkdown": "^2.0.0",
-    "tsx": "^4.19.1",
-    "utility-types": "^3.10.0",
-    "uuid": "^9.0.0",
-    "valibot": "^0.31.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@axe-core/react": "^4.2.1",
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-exponentiation-operator": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.23.7",
-    "@babel/preset-env": "^7.22.7",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@emotion/babel-plugin": "^11.11.0",
-    "@emotion/eslint-plugin": "^11.11.0",
-    "@guardian/browserslist-config": "^6.1.1",
-    "@guardian/eslint-config": "8.0.1",
-    "@guardian/eslint-config-typescript": "10.0.1",
-    "@guardian/paparazzi": "^0.3.1",
-    "@guardian/prettier": "^2.1.5",
-    "@khanacademy/flow-to-ts": "^0.5.1",
-    "@storybook/addon-a11y": "^7.4.2",
-    "@storybook/addon-actions": "^7.6.10",
-    "@storybook/addon-essentials": "^7.4.3",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-storysource": "^7.6.12",
-    "@storybook/addon-viewport": "^7.6.10",
-    "@storybook/jest": "^0.2.1",
-    "@storybook/preact": "^8.0.8",
-    "@storybook/preact-webpack5": "^7.3.2",
-    "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^15.0.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jsdom": "^21.1.6",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.16",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-add-react-displayname": "^0.0.5",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "chalk": "^4.1.0",
-    "chromatic": "^10.9.6",
-    "core-js": "^3.33.3",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "cssnano": "^6.0.1",
-    "dayjs": "^1.11.11",
-    "eslint": "^8.51.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-nibble": "^8.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-storybook": "^0.6.15",
-    "fast-sass-loader": "^2.0.1",
-    "file-loader": "^6.2.0",
-    "glob": "^10.3.12",
-    "husky": "^7.0.1",
-    "jest": "^24.9.0",
-    "jest-environment-jsdom-fifteen": "^1.0.2",
-    "json-sass-vars": "^3.1.0",
-    "lint-staged": "^15.2.0",
-    "madge": "^6.1.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "npm-run-all": "^4.1.3",
-    "postcss": "^8.4.38",
-    "postcss-loader": "^7.3.0",
-    "postcss-pxtorem": "^6.0.0",
-    "preact": "^10.23.2",
-    "preact-render-to-string": "^6.5.10",
-    "prettier": "^2.8.8",
-    "prettier-eslint": "^16.3.0",
-    "pretty-format": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-svg-loader": "^3.0.3",
-    "rimraf": "^5.0.1",
-    "sass": "^1.69.5",
-    "sass-mq": "^5.0.1",
-    "search-in-file": "^3.5.2",
-    "storybook": "^7.3.2",
-    "ts-loader": "9.4.4",
-    "tsc-files": "^1.1.4",
-    "typescript": "5.1.6",
-    "web-vitals": "^2.0.0",
-    "webpack": "^5.94.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-    "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^5.9.0",
-    "webpack-stats-plugin": "^1.1.3",
-    "yargs": "^17.7.2"
-  },
-  "lint-staged": {
-    "./assets/**/**/*.{js,jsx,ts,tsx}": "eslint"
-  }
+	"name": "support-frontend",
+	"version": "1.0.0",
+	"description": "Frontend for the supporter platform.",
+	"scripts": {
+		"clean": "echo 'Cleaning Public Folder' && rimraf public/compiled-assets",
+		"validate": "echo 'Validating TS' && npm-run-all 'lint:fix' && yarn orphans && yarn tsc",
+		"lint:nibble": "eslint-nibble ./assets --ext .ts,.tsx",
+		"lint:check": "eslint ./assets --ext .ts --ext .tsx",
+		"lint:fix": "yarn lint:check --fix",
+		"build-dev": "webpack --config webpack.dev.js",
+		"build-ssr": "tsx ./scripts/build-ssr-content.tsx",
+		"build-prod-no-test": "npm-run-all clean 'webpack --config webpack.prod.js'",
+		"build-prod": "npm-run-all clean test 'webpack --config webpack.prod.js'",
+		"build-github-action": "npm-run-all clean 'webpack --config webpack.prod.js --env ci=github'",
+		"webpack": "webpack",
+		"webpack-dev-server": "webpack serve --config webpack.dev.js --port 9211",
+		"devrun": "NODE_ENV=DEV npm-run-all clean webpack-dev-server",
+		"test": "NODE_ENV=test echo 'Running TS tests' && jest",
+		"test-watch": "NODE_ENV=test echo 'Running TS tests in watch mode' && jest --watch",
+		"jest-update-snapshot": "echo 'Updating TS tests' && jest -u",
+		"paparazzi": "paparazzi && open ./paparazzi",
+		"prepare": "cd .. && husky install ./support-frontend/.husky",
+		"prettier:check": "prettier --check ./assets",
+		"prettier:fix": "prettier --write ./assets",
+		"storybook": "storybook dev -p 9001 --no-open",
+		"build-storybook": "storybook build -o storybook-static",
+		"orphans": "echo 'Checking for orphan modules' && node scripts/orphans.js",
+		"check-images": "echo 'Purging unused images' && node scripts/gridImages.js"
+	},
+	"browserslist": [
+		"extends @guardian/browserslist-config"
+	],
+	"jest": {
+		"testMatch": [
+			"**/__tests__/**/*.[jt]s?(x)",
+			"**/?(*.)+(spec|test).[jt]s?(x)",
+			"!**/__fixtures__/**"
+		],
+		"transform": {
+			".+\\.(js|jsx|ts|tsx)$": "./node_modules/babel-jest"
+		},
+		"transformIgnorePatterns": [
+			"/node_modules/(?!@guardian|valibot)",
+			"^.+\\.module\\.(css|sass|scss)$"
+		],
+		"moduleFileExtensions": [
+			"js",
+			"ts",
+			"json",
+			"es6",
+			"jsx",
+			"tsx"
+		],
+		"modulePaths": [
+			"assets"
+		],
+		"modulePathIgnorePatterns": [
+			"target",
+			"assets copy"
+		],
+		"moduleNameMapper": {
+			"ophan(.*)": "<rootDir>/node_modules/ophan-tracker-js/build/ophan.support",
+			"\\.(css|less|sass|scss)$": "<rootDir>/assets/__mocks__/styleMock.ts",
+			"\\.(svg|png|jpg)$": "<rootDir>/assets/__mocks__/imageMock.ts"
+		},
+		"setupFilesAfterEnv": [
+			"./jestSetup"
+		],
+		"verbose": true,
+		"testEnvironment": "./jestEnvironment"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/guardian/support-frontend.git"
+	},
+	"bugs": {
+		"url": "https://github.com/guardian/support-frontend/issues"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.23.7",
+		"@emotion/cache": "^10.0.29",
+		"@emotion/core": "^11.0.0",
+		"@emotion/react": "^11.11.1",
+		"@emotion/serialize": "^1.1.2",
+		"@emotion/utils": "^1.1.0",
+		"@floating-ui/react": "^0.19.2",
+		"@guardian/libs": "16.1.0",
+		"@guardian/pasteup": "1.0.0-alpha.7",
+		"@guardian/source": "8.0.0",
+		"@guardian/source-development-kitchen": "13.0.0",
+		"@guardian/support-service-lambdas": "guardian/support-service-lambdas#70e330b5c433184981e2c6955025cbaa7666f353",
+		"@guardian/tsconfig": "^0.2.0",
+		"@reduxjs/toolkit": "^1.9.4",
+		"@sentry/browser": "^8.33.1",
+		"@stripe/react-stripe-js": "^2.7.3",
+		"@stripe/stripe-js": "^4.1.0",
+		"@types/dompurify": "^3.0.2",
+		"@types/seedrandom": "^3.0.8",
+		"@types/uuid": "^9.0.2",
+		"classnames": "^2.5.1",
+		"dompurify": "^3.1.3",
+		"emotion-theming": "^11.0.0",
+		"framer-motion": "^1.11.1",
+		"lodash.debounce": "^4.0.6",
+		"mockdate": "^3.0.5",
+		"ophan-tracker-js": "^1.4.3",
+		"react-day-picker": "^7.4.8",
+		"react-is": "^18.2.0",
+		"react-redux": "^8.1.0",
+		"react-router-dom": "^6.23.0",
+		"redux": "^4.0.0",
+		"redux-thunk": "^2.3.0",
+		"seedrandom": "^3.0.5",
+		"snarkdown": "^2.0.0",
+		"tsx": "^4.19.1",
+		"utility-types": "^3.10.0",
+		"uuid": "^9.0.0",
+		"valibot": "^0.31.0",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@axe-core/react": "^4.2.1",
+		"@babel/core": "^7.24.7",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/plugin-transform-exponentiation-operator": "^7.18.6",
+		"@babel/plugin-transform-runtime": "^7.23.7",
+		"@babel/preset-env": "^7.22.7",
+		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.23.3",
+		"@emotion/babel-plugin": "^11.11.0",
+		"@emotion/eslint-plugin": "^11.11.0",
+		"@guardian/browserslist-config": "^6.1.1",
+		"@guardian/eslint-config": "8.0.1",
+		"@guardian/eslint-config-typescript": "10.0.1",
+		"@guardian/paparazzi": "^0.3.1",
+		"@guardian/prettier": "^2.1.5",
+		"@khanacademy/flow-to-ts": "^0.5.1",
+		"@storybook/addon-a11y": "^7.4.2",
+		"@storybook/addon-actions": "^7.6.10",
+		"@storybook/addon-essentials": "^7.4.3",
+		"@storybook/addon-interactions": "^7.3.2",
+		"@storybook/addon-links": "^7.6.17",
+		"@storybook/addon-storysource": "^7.6.12",
+		"@storybook/addon-viewport": "^7.6.10",
+		"@storybook/jest": "^0.2.1",
+		"@storybook/preact": "^8.0.8",
+		"@storybook/preact-webpack5": "^7.3.2",
+		"@storybook/testing-library": "^0.2.2",
+		"@testing-library/jest-dom": "^6.6.2",
+		"@testing-library/react": "^15.0.2",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jsdom": "^21.1.6",
+		"@types/lodash.debounce": "^4.0.9",
+		"@types/react-dom": "^17.0.11",
+		"@types/react-router-dom": "^5.3.3",
+		"autoprefixer": "^10.4.16",
+		"babel-eslint": "^10.1.0",
+		"babel-jest": "^24.9.0",
+		"babel-loader": "^9.1.3",
+		"babel-plugin-add-react-displayname": "^0.0.5",
+		"babel-plugin-dynamic-import-node": "^2.3.3",
+		"chalk": "^4.1.0",
+		"chromatic": "^10.9.6",
+		"core-js": "^3.33.3",
+		"css-loader": "^6.7.1",
+		"css-minimizer-webpack-plugin": "^4.2.2",
+		"cssnano": "^6.0.1",
+		"dayjs": "^1.11.11",
+		"eslint": "^8.51.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-nibble": "^8.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-storybook": "^0.6.15",
+		"fast-sass-loader": "^2.0.1",
+		"file-loader": "^6.2.0",
+		"glob": "^10.3.12",
+		"husky": "^7.0.1",
+		"jest": "^24.9.0",
+		"jest-environment-jsdom-fifteen": "^1.0.2",
+		"json-sass-vars": "^3.1.0",
+		"lint-staged": "^15.2.0",
+		"madge": "^6.1.0",
+		"mini-css-extract-plugin": "^2.6.0",
+		"npm-run-all": "^4.1.3",
+		"postcss": "^8.4.38",
+		"postcss-loader": "^7.3.0",
+		"postcss-pxtorem": "^6.0.0",
+		"preact": "^10.23.2",
+		"preact-render-to-string": "^6.5.10",
+		"prettier": "^2.8.8",
+		"prettier-eslint": "^16.3.0",
+		"pretty-format": "^29.7.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-svg-loader": "^3.0.3",
+		"rimraf": "^5.0.1",
+		"sass": "^1.69.5",
+		"sass-mq": "^5.0.1",
+		"search-in-file": "^3.5.2",
+		"storybook": "^7.3.2",
+		"ts-loader": "9.4.4",
+		"tsc-files": "^1.1.4",
+		"typescript": "5.1.6",
+		"web-vitals": "^2.0.0",
+		"webpack": "^5.94.0",
+		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.2",
+		"webpack-manifest-plugin": "^5.0.0",
+		"webpack-merge": "^5.9.0",
+		"webpack-stats-plugin": "^1.1.3",
+		"yargs": "^17.7.2"
+	},
+	"lint-staged": {
+		"./assets/**/**/*.{js,jsx,ts,tsx}": "eslint"
+	}
 }
