--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.ts",
+    "check-formatting": "prettier --check **.ts",
+    "build": "tsc",
+    "package": "yarn check-formatting && yarn lint && yarn build && cd target && zip -qr discount-api.zip ../src/typescript/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,7 @@
     "ts-jest": "^29.2.4",
     "@types/node": "^20.11.27",
     "eslint": "^8.57.0",
+    "@guardian/eslint-config-typescript": "12.0.0",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
