--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -101,7 +101,7 @@ jobs:
                     - "-FailureHandlerLambda-"
                     - "-SendAcquisitionEventLambda-"
                     - "-PreparePaymentMethodForReuseLambda-"
-                  fileName: support-workers.jar
+                  fileName: support-workers.zip
                 dependencies: [cfn]
               it-tests:
                 type: aws-s3
