--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -135,20 +135,21 @@
 		"@guardian/eslint-config-typescript": "10.0.1",
 		"@guardian/paparazzi": "^0.3.1",
 		"@guardian/prettier": "^2.1.5",
-		"@storybook/addon-a11y": "^7.4.2",
-		"@storybook/addon-actions": "^7.6.10",
-		"@storybook/addon-essentials": "^7.4.3",
-		"@storybook/addon-interactions": "^7.3.2",
-		"@storybook/addon-links": "^7.6.17",
-		"@storybook/addon-storysource": "^7.6.12",
-		"@storybook/addon-viewport": "^7.6.10",
-		"@storybook/jest": "^0.2.1",
-		"@storybook/preact": "^8.0.8",
-		"@storybook/preact-webpack5": "^7.3.2",
-		"@storybook/testing-library": "^0.2.2",
+		"@storybook/addon-a11y": "^8.4.2",
+		"@storybook/addon-actions": "^8.4.2",
+		"@storybook/addon-essentials": "^8.4.2",
+		"@storybook/addon-interactions": "^8.4.2",
+		"@storybook/addon-links": "^8.4.2",
+		"@storybook/addon-storysource": "^8.4.2",
+		"@storybook/addon-viewport": "^8.4.2",
+		"@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+		"@storybook/preact": "^8.4.2",
+		"@storybook/preact-webpack5": "^8.4.2",
+		"@storybook/test": "^8.4.2",
 		"@testing-library/jest-dom": "^6.6.2",
 		"@testing-library/react": "^15.0.2",
 		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.14",
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/react-dom": "^17.0.11",
@@ -171,7 +172,7 @@
 		"eslint-nibble": "^8.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-storybook": "^0.6.15",
+		"eslint-plugin-storybook": "^0.11.0",
 		"fast-sass-loader": "^2.0.1",
 		"file-loader": "^6.2.0",
 		"glob": "^10.3.12",
@@ -197,7 +198,7 @@
 		"sass": "^1.69.5",
 		"sass-mq": "^5.0.1",
 		"search-in-file": "^3.5.2",
-		"storybook": "^7.3.2",
+		"storybook": "^8.4.2",
 		"ts-loader": "9.4.4",
 		"tsc-files": "^1.1.4",
 		"typescript": "5.1.6",
