--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -68,7 +68,7 @@
 			"./jestSetup"
 		],
 		"verbose": true,
-		"testEnvironment": "./jestEnvironment"
+		"testEnvironment": "jest-environment-jsdom-global"
 	},
 	"repository": {
 		"type": "git",
@@ -156,7 +156,7 @@
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.16",
 		"babel-eslint": "^10.1.0",
-		"babel-jest": "^24.9.0",
+		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-add-react-displayname": "^0.0.5",
 		"babel-plugin-dynamic-import-node": "^2.3.3",
@@ -177,8 +177,9 @@
 		"file-loader": "^6.2.0",
 		"glob": "^10.3.12",
 		"husky": "^7.0.1",
-		"jest": "^24.9.0",
-		"jest-environment-jsdom-fifteen": "^1.0.2",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-environment-jsdom-global": "^4.0.0",
 		"json-sass-vars": "^3.1.0",
 		"lint-staged": "^15.2.0",
 		"madge": "^6.1.0",
