Update CODE config to get tests passing

--- a/support-config/src/main/resources/touchpoint.CODE.conf
+++ b/support-config/src/main/resources/touchpoint.CODE.conf
@@ -60,6 +60,10 @@ touchpoint.backend.environments {
             annual.contribution.productRatePlanChargeId = "8ad096ca858682bb0185881568385d73"
         }
       }
+      guardianlight {
+          paymentGracePeriod = 2 // TODO: check how we handle this (and the value)
+          monthly.productRatePlanChargeId = "71a1c43a10792b28f702b3bf5d380037"
+      }
     }
     promotions {
       discount {
