Add concurrently npm package

--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -162,6 +162,7 @@
 		"babel-plugin-dynamic-import-node": "^2.3.3",
 		"chalk": "^4.1.0",
 		"chromatic": "^10.9.6",
+		"concurrently": "^9.1.0",
 		"core-js": "^3.33.3",
 		"css-loader": "^6.7.1",
 		"css-minimizer-webpack-plugin": "^4.2.2",
